# capstone

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yml
ACC Algorithm/: ACCAlgorithMain.c
acc/: ACC.c  ACC.h  acc_test_suite.c
src/: CMakeLists.txt  Motor_Control_w_Serial_UART.ino  README.md  Serial_Test_UART.ino  main.c  makefile  requirements.txt  safetyboard-test  safetyboard.c  safetyboard.h
src/Motor_Control/: Motor_Control.ino
src/arduino/: arduino.ino  comm_layer.c  comm_layer.h  schemas.cpp  schemas.h  speedometer.cpp  speedometer.h  uart_comm_layer.cpp  uart_comm_layer.h
src/controller/: test_comm.py
src/controller/acc/: CMakeLists.txt
src/controller/acc/include/: ACC.h
src/controller/acc/src/: ACC.c
src/controller/configs/hil/: CMakeLists.txt  prj.conf  stm32h735g_disco.overlay
src/controller/configs/sil/: CMakeLists.txt
src/controller/include/: acc.h  safetyboard.h
src/controller/src/: acc.c  main.c  main.txt  safetyboard.c  socket_echo.c
src/controller/test/: README.md  main.c  main_test.cpp  safetyboard-test  safetyboard.c  safetyboard.h  test_crc.cpp  test_main.cpp  test_pack_unpack.cpp  test_pid.c  test_rc.cpp  test_safetyboard.cpp
src/plant/: rc_dynamics.c  rc_dynamics.h
src/processing/: extract_transfer_function.ipynb  process_data.py
src/processing/data/: all_four_tuned.txt  backward.txt  faster_sine.txt  putty.txt  sine_command.txt  smoother_sine_command.txt  speed_100.txt  speed_150.txt  speed_150_2.txt  speed_255.txt  swept_sine_0_9.txt
src/safety/: README.md  main.c  safetyboard-test  safetyboard.h
src/safety/test/: CMakeLists.txt  main.c  makefile  test_crc.cc
src/simulator/: CMakeLists.txt  acc_wrapper.py  client_socket.py  env_simulator.py  hil.py  main.py  plant_model.py  plot_drive_cycle.py  real_time_viz.py  sil.py
src/simulator/drive_cycle/: constant_30.csv  erratic.csv  hwfet.csv  la4.csv  no_lead.csv  no_lead_long.csv  rising_30.csv  stepwise.csv  udds.csv  udds505_hwfet.csv  vts_sample.csv
src/simulator/include/: besee_utils.h
src/simulator/python/metrics/: cacc_metrics.py  metrics.py
src/simulator/python/optimizer/: cacc_optimize.py  optimize.py
src/simulator/python/test/: .coverage  conftest.py  test_cacc_requirements.py
src/simulator/python/viz/: vloggers.py
src/simulator/src/: main.cpp
src/simulator/src/besee_core/: actor_utils.cpp  besee_core.cpp  lane_utils.cpp  path_utils.cpp  sim_controller_utils.cpp
src/simulator/test/: besee_ego_transformation_test.cpp  main_test.cpp
src/simulator/test/system/: report.html  requirements.py  test_system_reqs.py
src/simulator/test/unit/: test_plant.py  test_simulator.py  test_visualizer.py
src/simulator/viz/: real_time_viz.py
test/: CMakeLists.txt  README.md  crc-test.c  crc_test.cc
test/pytest/: test_plant.py  test_simulator.py  test_visualizer.py
